fix: navbar height not covering whole column

--- a/src/App.css
+++ b/src/App.css
@@ -5,6 +5,7 @@
 }
 
 body {
+	min-height: 100vh;
 	background: rgba(var(--bg--deep), 1);
 	padding-bottom: 50px;
 }
@@ -14,10 +15,15 @@ body {
 	margin: 0px;
 }
 
+#root {
+	height: 100vh;
+}
+
 #audio {
 }
 
 #rootGrid {
+	height: inherit;
 	display: grid;
 	grid-template: 1fr / 1fr 5fr;
 }
